# xoloria

./: .gitignore  Cargo.toml  README.md  code.S
.cargo/: config.toml
crates/archtests/: Cargo.toml  build.rs
crates/archtests/config/: linker.ld  rvmodel_macros.h  sail.json  test_config.yaml  xoloria-rv64imac.yaml  xoloria-rva23S64.yaml
crates/archtests/src/: main.rs
crates/archtests/tests/: arch.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/debugger/: Cargo.toml
crates/debugger/src/: app.rs  command.rs  debug_symbols.rs  devices_panel.rs  disassembly.rs  input.rs  main.rs  stack.rs  state.rs  theme.rs  ui.rs  ui_state.rs
crates/debugger/src/themes/: catppuccin_frappe.json  catppuccin_latte.json  catppuccin_macchiato.json  catppuccin_mocha.json  dracula.json  everforest_dark_hard.json  everforest_dark_medium.json  everforest_dark_soft.json  everforest_light_hard.json  everforest_light_medium.json  everforest_light_soft.json  evergarden.json  gruvbox_dark.json  gruvbox_light.json  tokyonight_day.json  tokyonight_moon.json  tokyonight_night.json  tokyonight_storm.json
crates/emulator/: Cargo.toml
crates/emulator/src/: bus.rs  error.rs  hart.rs  lib.rs  machine.rs  main.rs  memory.rs  mmu.rs
crates/emulator/src/devices/: aclint.rs  memory.rs  mod.rs
crates/emulator/src/instructions/: display.rs  mod.rs  parser.rs  payload.rs
crates/emulator/src/registers/: csr.rs  field.rs  mie.rs  mip.rs  misa.rs  mod.rs  mtvec.rs  names.rs  satp.rs  set.rs
crates/emulator/src/vm/: atomic.rs  csr.rs  jump.rs  load.rs  mod.rs  store.rs
crates/firmware/: Cargo.toml  build.rs  linker.ld
crates/firmware/src/: main.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs  register.rs  register_field.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: build.rs  clean.rs  lib.rs  lints.rs  main.rs  opts.rs  tools.rs
programs/: Makefile  instructions_test.S  test.S  test.c
src/: bus.rs  error.rs  errors.rs  hart.rs  lib.rs  machine.rs  main.rs  memory.rs
src/instructions/: display.rs  instruction.rs  mod.rs  opcode.rs  parser.rs  payload.rs
src/registers/: mod.rs  names.rs
src/vm/: branch.rs  jump.rs  load.rs  lui.rs  mod.rs  opimm.rs  opreg.rs
