[workspace]
resolver = "3"
members = [
    "crates/emulator",
    "crates/firmware",
    "crates/cli",
    "crates/debugger",
    "crates/archtests",
    "crates/xtask",
    "crates/macros",
]

[workspace.dependencies]
anyhow = { version = "1.0.102", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
buddy_system_allocator = "0.13.0"
num-traits = "0.2.19"
ratatui = "0.29"
crossterm = "0.28"
addr2line = "0.24"
gimli = { version = "0.31", default-features = false, features = ["read"] }
object = { version = "0.36", default-features = false, features = ["read"] }
rustc-demangle = "0.1.24"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
evalexpr = "13.1.0"
syntect = "5.2.0"
regex = "1.10"
reqwest = { version = "0.13.4", features = ["blocking"] }
flate2 = "1.1.9"
tar = "0.4.45"
walkdir = "2.5.0"
strum = { version = "0.28", features = ["derive"] }
syn = "2.0.118"
quote = "1.0.46"
proc-macro2 = "1.0.106"

emulator = { path = "crates/emulator" }
xtask = { path = "crates/xtask" }
macros = { path = "crates/macros" }