[package]
name = "debugger"
version = "0.1.0"
edition = "2024"

[dependencies]
emulator.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true
crossterm.workspace = true
addr2line.workspace = true
gimli.workspace = true
object.workspace = true
